updated vue cdn link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </css-doodle>
 
   <script src="https://unpkg.com/css-doodle@0.6.1/css-doodle.min.js"></script>
-  <script src="https://unpkg.com/vue@next"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="app.js"></script>
 </body>
 
